--- a/bot/Dockerfile
+++ b/bot/Dockerfile
@@ -3,4 +3,4 @@ FROM python:3.9-slim
 WORKDIR /opt/bot
 
 COPY requirements.txt requirements.txt
-RUN pip install requirements.txt
+RUN pip install -r requirements.txt
