--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,7 @@
 version: "3.9"  # optional since v1.27.0
 services:
   crawlers_api:
+    container_name: crawlers_api
     build:
       context: ./crawlers
     ports:
@@ -10,6 +11,7 @@ services:
       - logvolume01:/var/log
     command: "bash -c 'python api.py'"
   bot:
+    container_name: bot
     build:
       context: ./bot
     volumes:
